--- a/app/about.html
+++ b/app/about.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="./css/style.min.css" type="text/css">
   <script src="./js/svg.js"></script>
   <link rel="preload" href="./fonts/Roboto-Bold.woff2" type="font/woff2" as="font" crossorigin>
@@ -21,13 +21,13 @@
     <section class="section hero">
       <div class="hero__bg"><img class="hero__bg--image" src="img/bg/portfolio-mount.jpg"></div>
       <ul class="socials">
-        <li class="socials__item"><a class="socials__link" href=""><svg class="socials__image socials__image--vk" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" preserveAspectRatio="none" width="undefinedpx" height="undefinedpx">
+        <li class="socials__item"><a class="socials__link" href="#"><svg class="socials__image socials__image--vk" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" preserveAspectRatio="none" width="undefinedpx" height="undefinedpx">
               <use xlink:href="#vk"></use>
             </svg></a></li>
-        <li class="socials__item"><a class="socials__link" href=""><svg class="socials__image socials__image--github" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" preserveAspectRatio="none" width="undefinedpx" height="undefinedpx">
+        <li class="socials__item"><a class="socials__link" href="#"><svg class="socials__image socials__image--github" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" preserveAspectRatio="none" width="undefinedpx" height="undefinedpx">
               <use xlink:href="#github"></use>
             </svg></a></li>
-        <li class="socials__item"><a class="socials__link" href=""><svg class="socials__image socials__image--in" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" preserveAspectRatio="none" width="undefinedpx" height="undefinedpx">
+        <li class="socials__item"><a class="socials__link" href="#"><svg class="socials__image socials__image--in" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" preserveAspectRatio="none" width="undefinedpx" height="undefinedpx">
               <use xlink:href="#in"></use>
             </svg></a></li>
       </ul><a class="hamburger" href=""><svg class="hamburger__image" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" preserveAspectRatio="none" viewBox="0 0 40 35" width="undefinedpx" height="undefinedpx">
@@ -35,7 +35,7 @@
         </svg></a><a class="down-arrow" href=""><svg class="down-arrow--image" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" preserveAspectRatio="none" viewBox="0 0 25.18 16.164" width="25px" height="16px">
           <use xlink:href="#arrow_down"></use>
         </svg></a>
-      <div class="hero__title"><svg class="section__title" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" preserveAspectRatio="none" viewBox="0 0 1175.495 313.961" width="undefinedpx" height="undefinedpx">
+      <div class="hero__title"><svg class="hero__title--image" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" preserveAspectRatio="none" viewBox="0 0 1175.495 313.961" width="undefinedpx" height="undefinedpx">
           <use xlink:href="#portfolio_header"></use>
         </svg>
         <div class="user hero__user-block">
@@ -87,17 +87,26 @@
                   <div class="skill-section__title">Frontend</div>
                   <ul class="skill-section__list">
                     <li class="skill-section__item">
-                      <div class="skill"><svg class="skill__circle"></svg>
+                      <div class="skill"><svg class="skill__circle" viewBox="0 0 100 100" preserveAspectRatio="none">
+                          <circle class="skills__circle-under" cx="50" cy="50" r="40"></circle>
+                          <circle class="skills__circle-above" cx="50" cy="50" r="40"></circle>
+                        </svg>
                         <div class="skill__name">HTML5</div>
                       </div>
                     </li>
                     <li class="skill-section__item">
-                      <div class="skill"><svg class="skill__circle"></svg>
+                      <div class="skill"><svg class="skill__circle" viewBox="0 0 100 100" preserveAspectRatio="none">
+                          <circle class="skills__circle-under" cx="50" cy="50" r="40"></circle>
+                          <circle class="skills__circle-above" cx="50" cy="50" r="40"></circle>
+                        </svg>
                         <div class="skill__name">CSS3</div>
                       </div>
                     </li>
                     <li class="skill-section__item">
-                      <div class="skill"><svg class="skill__circle"></svg>
+                      <div class="skill"><svg class="skill__circle" viewBox="0 0 100 100" preserveAspectRatio="none">
+                          <circle class="skills__circle-under" cx="50" cy="50" r="40"></circle>
+                          <circle class="skills__circle-above" cx="50" cy="50" r="40"></circle>
+                        </svg>
                         <div class="skill__name">JavaScript</div>
                       </div>
                     </li>
@@ -109,22 +118,34 @@
                   <div class="skill-section__title">Backend</div>
                   <ul class="skill-section__list">
                     <li class="skill-section__item">
-                      <div class="skill"><svg class="skill__circle"></svg>
+                      <div class="skill"><svg class="skill__circle" viewBox="0 0 100 100" preserveAspectRatio="none">
+                          <circle class="skills__circle-under" cx="50" cy="50" r="40"></circle>
+                          <circle class="skills__circle-above" cx="50" cy="50" r="40"></circle>
+                        </svg>
                         <div class="skill__name">PHP</div>
                       </div>
                     </li>
                     <li class="skill-section__item">
-                      <div class="skill"><svg class="skill__circle"></svg>
+                      <div class="skill"><svg class="skill__circle" viewBox="0 0 100 100" preserveAspectRatio="none">
+                          <circle class="skills__circle-under" cx="50" cy="50" r="40"></circle>
+                          <circle class="skills__circle-above" cx="50" cy="50" r="40"></circle>
+                        </svg>
                         <div class="skill__name">mySQL</div>
                       </div>
                     </li>
                     <li class="skill-section__item">
-                      <div class="skill"><svg class="skill__circle"></svg>
+                      <div class="skill"><svg class="skill__circle" viewBox="0 0 100 100" preserveAspectRatio="none">
+                          <circle class="skills__circle-under" cx="50" cy="50" r="40"></circle>
+                          <circle class="skills__circle-above" cx="50" cy="50" r="40"></circle>
+                        </svg>
                         <div class="skill__name">Node.js &amp; npm</div>
                       </div>
                     </li>
                     <li class="skill-section__item">
-                      <div class="skill"><svg class="skill__circle"></svg>
+                      <div class="skill"><svg class="skill__circle" viewBox="0 0 100 100" preserveAspectRatio="none">
+                          <circle class="skills__circle-under" cx="50" cy="50" r="40"></circle>
+                          <circle class="skills__circle-above" cx="50" cy="50" r="40"></circle>
+                        </svg>
                         <div class="skill__name">Mongo.db</div>
                       </div>
                     </li>
@@ -136,17 +157,26 @@
                   <div class="skill-section__title">WorkFlow</div>
                   <ul class="skill-section__list">
                     <li class="skill-section__item">
-                      <div class="skill"><svg class="skill__circle"></svg>
+                      <div class="skill"><svg class="skill__circle" viewBox="0 0 100 100" preserveAspectRatio="none">
+                          <circle class="skills__circle-under" cx="50" cy="50" r="40"></circle>
+                          <circle class="skills__circle-above" cx="50" cy="50" r="40"></circle>
+                        </svg>
                         <div class="skill__name">Git</div>
                       </div>
                     </li>
                     <li class="skill-section__item">
-                      <div class="skill"><svg class="skill__circle"></svg>
+                      <div class="skill"><svg class="skill__circle" viewBox="0 0 100 100" preserveAspectRatio="none">
+                          <circle class="skills__circle-under" cx="50" cy="50" r="40"></circle>
+                          <circle class="skills__circle-above" cx="50" cy="50" r="40"></circle>
+                        </svg>
                         <div class="skill__name">Gulp</div>
                       </div>
                     </li>
                     <li class="skill-section__item">
-                      <div class="skill"><svg class="skill__circle"></svg>
+                      <div class="skill"><svg class="skill__circle" viewBox="0 0 100 100" preserveAspectRatio="none">
+                          <circle class="skills__circle-under" cx="50" cy="50" r="40"></circle>
+                          <circle class="skills__circle-above" cx="50" cy="50" r="40"></circle>
+                        </svg>
                         <div class="skill__name">Bower</div>
                       </div>
                     </li>
@@ -158,7 +188,28 @@
         </div>
       </div>
     </section>
-    <section class="section map"></section>
+    <footer class="footer">
+      <div class="footer__menu">
+        <ul class="nav-menu">
+          <li class="nav-menu__item"><a class="nav-menu__link" href="#">Authorizations</a></li>
+          <li class="nav-menu__item"><a class="nav-menu__link" href="#">About Me</a></li>
+          <li class="nav-menu__item"><a class="nav-menu__link" href="#">My Last Works</a></li>
+        </ul>
+      </div>
+      <div class="footer__socials">
+        <ul class="socials__list">
+          <li class="socials__item"><a class="socials__link" href="#"><svg class="socials__image socials__image--vk" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" preserveAspectRatio="none" width="undefinedpx" height="undefinedpx">
+                <use xlink:href="#vk_round"></use>
+              </svg></a></li>
+          <li class="socials__item"><a class="socials__link" href="#"><svg class="socials__image socials__image--github" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" preserveAspectRatio="none" width="undefinedpx" height="undefinedpx">
+                <use xlink:href="#github_round"></use>
+              </svg></a></li>
+          <li class="socials__item"><a class="socials__link" href="#"><svg class="socials__image socials__image--in" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" preserveAspectRatio="none" width="undefinedpx" height="undefinedpx">
+                <use xlink:href="#in_round"></use>
+              </svg></a></li>
+        </ul>
+      </div>
+    </footer>
   </div>
 </body>
 
