--- a/app/works.html
+++ b/app/works.html
@@ -21,21 +21,18 @@
     <section class="section hero">
       <div class="hero__bg"><img class="hero__bg--image" src="img/bg/portfolio-mount.jpg"></div>
       <ul class="socials">
-        <li class="socials__item"><a class="socials__link" href="#"><svg class="socials__image socials__image--vk" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" preserveAspectRatio="none" width="undefinedpx" height="undefinedpx">
-              <use xlink:href="#vk"></use>
-            </svg></a></li>
-        <li class="socials__item"><a class="socials__link" href="#"><svg class="socials__image socials__image--github" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" preserveAspectRatio="none" width="undefinedpx" height="undefinedpx">
+        <li class="socials__item"><a class="socials__link" href="#"><svg class="socials__image socials__image--github" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" preserveAspectRatio="none">
               <use xlink:href="#github"></use>
             </svg></a></li>
-        <li class="socials__item"><a class="socials__link" href="#"><svg class="socials__image socials__image--in" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" preserveAspectRatio="none" width="undefinedpx" height="undefinedpx">
-              <use xlink:href="#in"></use>
+        <li class="socials__item"><a class="socials__link" href="#"><svg class="socials__image socials__image--upwork" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" preserveAspectRatio="none">
+              <use xlink:href="#upwork"></use>
             </svg></a></li>
-      </ul><a class="hamburger" href=""><svg class="hamburger__image" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" preserveAspectRatio="none" viewBox="0 0 40 35" width="undefinedpx" height="undefinedpx">
+      </ul><a class="hamburger" href=""><svg class="hamburger__image" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" preserveAspectRatio="none" viewBox="0 0 40 35">
           <use xlink:href="#hamburger"></use>
-        </svg></a><a class="down-arrow" href=""><svg class="down-arrow--image" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" preserveAspectRatio="none" viewBox="0 0 25.18 16.164" width="25px" height="16px">
+        </svg></a><a class="down-arrow" href=""><svg class="down-arrow--image" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" preserveAspectRatio="none" viewBox="0 0 25.18 16.164">
           <use xlink:href="#arrow_down"></use>
         </svg></a>
-      <div class="hero__title"><svg class="hero__title--image" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" preserveAspectRatio="none" viewBox="0 0 1175.495 313.961" width="undefinedpx" height="undefinedpx">
+      <div class="hero__title"><svg class="hero__title--image" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" preserveAspectRatio="none" viewBox="0 0 1175.495 313.961">
           <use xlink:href="#portfolio_header"></use>
         </svg>
         <div class="user hero__user-block">
@@ -50,7 +47,9 @@
       </svg><svg class="triangle works-head__triangle" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1000 100" preserveAspectRatio="none">
         <polygon points="0,100 1000,100 1000,0"></polygon>
       </svg>
-      <div class="title section__title">My Last Works</div>
+      <div class="title section__title">My Last Works<svg class="works__section--image" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" preserveAspectRatio="none" viewBox="0 0 498.161 175.44">
+          <use xlink:href="#works_header"></use>
+        </svg></div>
     </section>
     <section class="section slider">
       <div class="slider__desc">
@@ -59,36 +58,47 @@
             <div class="block-title subtitle">Some site</div>
           </div>
           <div class="slider__desc--skills">HTML,CSS,JavaScript</div>
-          <div class="slider__desc--btn"><a class="btn" href="">Look Site</a></div>
-          <div class="slider__desc--btn"><a class="btn" href="">PSD File</a></div>
+          <div class="slider__desc--buttons">
+            <div class="slider__desc--btn"><a class="btn" href="">Look Site</a></div>
+            <div class="slider__desc--btn"><a class="btn" href="">PSD File</a></div>
+          </div>
         </div>
       </div>
-      <div class="slider__display"><img class="slider__display--picture" src="./img/1.png"></div>
-      <div class="slider__buttons"><a class="slider__btn slider__btn--prev" href="#"></a><a class="slider__btn slider__btn--next" href="#"></a></div>
+      <div class="slider__display">
+        <div class="slider__image"><img class="slider__display--picture" src="./img/1.png"></div>
+        <div class="slider__buttons"><button class="slider__btn slider__btn--prev"><img class="slider__btn--image" src="./img/mockup-tri.png">
+            <div class="shadow"></div><svg class="slider__arrow" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" preserveAspectRatio="none">
+              <use xlink:href="#portf_arrow_down"></use>
+            </svg>
+          </button><button class="slider__btn slider__btn--next"><img class="slider__btn--image" src="./img/mockup-yo.png">
+            <div class="shadow"></div><svg class="slider__arrow" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" preserveAspectRatio="none">
+              <use xlink:href="#portf_arrow_up"></use>
+            </svg>
+          </button></div>
+      </div>
     </section>
+    <section class="reviews"></section>
     <footer class="footer">
       <div class="footer__menu">
         <ul class="nav-menu">
-          <li class="nav-menu__item"><a class="nav-menu__link" href="#">Authorizations</a></li>
+          <li class="nav-menu__item"><a class="nav-menu__link" href="#">Hello Page</a></li>
           <li class="nav-menu__item"><a class="nav-menu__link" href="#">About Me</a></li>
           <li class="nav-menu__item"><a class="nav-menu__link" href="#">My Last Works</a></li>
         </ul>
       </div>
       <div class="footer__socials">
         <ul class="socials__list">
-          <li class="socials__item"><a class="socials__link" href="#"><svg class="socials__image socials__image--vk" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" preserveAspectRatio="none" width="undefinedpx" height="undefinedpx">
-                <use xlink:href="#vk_round"></use>
-              </svg></a></li>
-          <li class="socials__item"><a class="socials__link" href="#"><svg class="socials__image socials__image--github" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" preserveAspectRatio="none" width="undefinedpx" height="undefinedpx">
+          <li class="socials__item"><a class="socials__link" href="#"><svg class="socials__image socials__image--github" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" preserveAspectRatio="none">
                 <use xlink:href="#github_round"></use>
               </svg></a></li>
-          <li class="socials__item"><a class="socials__link" href="#"><svg class="socials__image socials__image--in" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" preserveAspectRatio="none" width="undefinedpx" height="undefinedpx">
-                <use xlink:href="#in_round"></use>
+          <li class="socials__item"><a class="socials__link" href="#"><svg class="socials__image socials__image--upwork" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" preserveAspectRatio="none">
+                <use xlink:href="#upwork_round"></use>
               </svg></a></li>
         </ul>
       </div>
     </footer>
   </div>
+  <script src="./js/scripts.min.js"></script>
 </body>
 
 </html>
