--- a/app/works.html
+++ b/app/works.html
@@ -19,7 +19,19 @@
   </script>
   <div class="wrapper">
     <section class="section hero">
-      <div class="hero__bg"><img class="hero__bg--image" src="img/bg/portfolio-mount.jpg"></div>
+      <div class="hero__bg">
+        <div class="parallax-mount">
+          <div class="parallax-mount__layer"><img class="parallax-mount__image" src="./img/parallax-mount/Layer9.jpg"></div>
+          <div class="parallax-mount__layer"><img class="parallax-mount__image" src="./img/parallax-mount/Layer8-1.png"></div>
+          <div class="parallax-mount__layer"><img class="parallax-mount__image" src="./img/parallax-mount/Layer7-1.png"></div>
+          <div class="parallax-mount__layer"><img class="parallax-mount__image" src="./img/parallax-mount/Layer6-1.png"></div>
+          <div class="parallax-mount__layer"><img class="parallax-mount__image" src="./img/parallax-mount/6cloud_PNG4.png"></div>
+          <div class="parallax-mount__layer"><img class="parallax-mount__image" src="./img/parallax-mount/Layer4-1.png"></div>
+          <div class="parallax-mount__layer"><img class="parallax-mount__image" src="./img/parallax-mount/3sky.png"></div>
+          <div class="parallax-mount__layer"><img class="parallax-mount__image" src="./img/parallax-mount/Layer2-1.png"></div>
+          <div class="parallax-mount__layer"><img class="parallax-mount__image" src="./img/parallax-mount/Layer1-1.png"></div>
+        </div>
+      </div>
       <ul class="socials">
         <li class="socials__item"><a class="socials__link" href="#"><svg class="socials__image socials__image--github" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" preserveAspectRatio="none">
               <use xlink:href="#github"></use>
@@ -66,15 +78,11 @@
       </div>
       <div class="slider__display">
         <div class="slider__image"><img class="slider__display--picture" src="./img/1.png"></div>
-        <div class="slider__buttons"><button class="slider__btn slider__btn--prev"><img class="slider__btn--image" src="./img/mockup-tri.png">
-            <div class="shadow"></div><svg class="slider__arrow" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" preserveAspectRatio="none">
+        <div class="slider__buttons"><button class="slider__btn slider__btn--prev"><img class="slider__btn--image" src="./img/mockup-tri.png"><span class="shadow"></span><svg class="slider__arrow" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" preserveAspectRatio="none">
               <use xlink:href="#portf_arrow_down"></use>
-            </svg>
-          </button><button class="slider__btn slider__btn--next"><img class="slider__btn--image" src="./img/mockup-yo.png">
-            <div class="shadow"></div><svg class="slider__arrow" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" preserveAspectRatio="none">
+            </svg></button><button class="slider__btn slider__btn--next"><img class="slider__btn--image" src="./img/mockup-yo.png"><span class="shadow"></span><svg class="slider__arrow" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" preserveAspectRatio="none">
               <use xlink:href="#portf_arrow_up"></use>
-            </svg>
-          </button></div>
+            </svg></button></div>
       </div>
     </section>
     <section class="reviews"></section>
