--- a/app/index.html
+++ b/app/index.html
@@ -19,16 +19,18 @@
   </script>
   <div class="wrapper">
     <div class="auth-container">
-      <div class="parallax-mount">
-        <div class="parallax-mount__layer"><img class="parallax-mount__image" src="./img/parallax-mount/Layer9.jpg"></div>
-        <div class="parallax-mount__layer"><img class="parallax-mount__image" src="./img/parallax-mount/Layer8-1.png"></div>
-        <div class="parallax-mount__layer"><img class="parallax-mount__image" src="./img/parallax-mount/Layer7-1.png"></div>
-        <div class="parallax-mount__layer"><img class="parallax-mount__image" src="./img/parallax-mount/Layer6-1.png"></div>
-        <div class="parallax-mount__layer"><img class="parallax-mount__image" src="./img/parallax-mount/6cloud_PNG4.png"></div>
-        <div class="parallax-mount__layer"><img class="parallax-mount__image" src="./img/parallax-mount/Layer4-1.png"></div>
-        <div class="parallax-mount__layer"><img class="parallax-mount__image" src="./img/parallax-mount/3sky.png"></div>
-        <div class="parallax-mount__layer"><img class="parallax-mount__image" src="./img/parallax-mount/Layer2-1.png"></div>
-        <div class="parallax-mount__layer"><img class="parallax-mount__image" src="./img/parallax-mount/Layer1-1.png"></div>
+      <div class="hero__bg">
+        <div class="parallax-mount">
+          <div class="parallax-mount__layer"><img class="parallax-mount__image" src="./img/parallax-mount/Layer9.jpg"></div>
+          <div class="parallax-mount__layer"><img class="parallax-mount__image" src="./img/parallax-mount/Layer8-1.png"></div>
+          <div class="parallax-mount__layer"><img class="parallax-mount__image" src="./img/parallax-mount/Layer7-1.png"></div>
+          <div class="parallax-mount__layer"><img class="parallax-mount__image" src="./img/parallax-mount/Layer6-1.png"></div>
+          <div class="parallax-mount__layer"><img class="parallax-mount__image" src="./img/parallax-mount/6cloud_PNG4.png"></div>
+          <div class="parallax-mount__layer"><img class="parallax-mount__image" src="./img/parallax-mount/Layer4-1.png"></div>
+          <div class="parallax-mount__layer"><img class="parallax-mount__image" src="./img/parallax-mount/3sky.png"></div>
+          <div class="parallax-mount__layer"><img class="parallax-mount__image" src="./img/parallax-mount/Layer2-1.png"></div>
+          <div class="parallax-mount__layer"><img class="parallax-mount__image" src="./img/parallax-mount/Layer1-1.png"></div>
+        </div>
       </div>
       <div class="auth">
         <div class="auth__info">
@@ -43,10 +45,10 @@
                 </svg></a></div>
           </div>
         </div>
-        <div class="auth__btns"><a class="auth__btn" href="#">My last Works</a><a class="auth__btn" href="#">About Me</a><a class="auth__btn" href="#">Change Theme</a></div>
+        <div class="auth__btns"><a class="auth__btn" href="works.html">My last Works</a><a class="auth__btn" href="about.html">About Me</a><a class="auth__btn" href="#">Change Theme</a></div>
       </div>
+      <div class="auth__login"><button class="auth__login--link"> Authorizations</button></div>
     </div>
-    <div class="auth__login"><button class="auth__login--link"> Authorizations</button></div>
   </div>
   <script src="./js/scripts.min.js"></script>
 </body>
